changing width to percentage to fix a bug on firefox

--- a/client/style.css
+++ b/client/style.css
@@ -42,7 +42,7 @@ a:hover {
     float: left;
 }
 #header {
-    width: 525px;
+    width: 40%;
     margin: 50px auto auto auto;
     height: 60px;
 }
